--- a/skeleton-main/skeleton/skeleton-war/src/main/webapp/index.xhtml
+++ b/skeleton-main/skeleton/skeleton-war/src/main/webapp/index.xhtml
@@ -1,95 +1,152 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-<f:view contentType="text/html" encoding="UTF-8">
-	<ui:insert name="metadata"></ui:insert>
-	<h:head>
-		<title>Taskboard - A JakartaEE Faces Sample</title>
-		<!-- Required meta tags -->
-		<meta charset="utf-8"></meta>
-		<meta name="viewport"
-			content="width=device-width, initial-scale=1, shrink-to-fit=no"></meta>
-		<!-- styles -->
-		<link rel="stylesheet"
-			href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-			integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-			crossorigin="anonymous" />
-		<link
-			href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-			rel="stylesheet"
-			integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
-			crossorigin="anonymous" />
-		<link href="#{request.contextPath}/resources/css/main.css"
-			rel="stylesheet" />
-		<!--            <h:outputStylesheet library="css" name="main.css"></h:outputStylesheet>-->
-		<ui:insert name="headIncludes"></ui:insert>
-	</h:head>
-	<h:body styleClass="d-flex flex-column h-100">
-		<main role="main" class="flex-shrink-0">
-		<div class="container">
-			<h1 class="page-header display-3">
-				<ui:insert name="pageTitle"></ui:insert>
-			</h1>
-			<div class="row">
-				<div class="col-md-12">
-					<h:form id="form" role="form" class="form">
-						<h:messages showDetail="true" />
-						<div class="form-group row">
-							<label class="col-sm-2 col-form-label" for="propriedadeEndereco">Mensagem:</label>
-							<div class="col-sm-10">
-								<h:inputText type="text" id="mensagem" class="form-control"
-									value="#{mBeanEnvio.config.mensagem}" required="true"
-									placeholder="#{mBeanEnvio.config.mensagem}">
-								</h:inputText>
-							</div>
-						</div>
-						<div class="form-group row">
-							<label class="col-sm-2 col-form-label" for="submitTask">Enviar:</label>
-							<div class="col-sm-10">
-								<h:commandButton id="submitTask" type="submit"
-									styleClass="btn btn-sm btn-primary"
-									action="#{mBeanEnvio.enviar}" value="Enviar" ajax="true"
-									update="@form:erro"></h:commandButton>
-							</div>
-						</div>
-						<div class="form-group row">
-							<label class="col-sm-2 col-form-label" for="mensagemRetorno">Retorno:</label>
-							<div class="col-sm-10">
-								<h:inputTextarea value="#{mBeanEnvio.mensagemRetorno}" id="mensagemRetorno"
-									class="form-control">
-								</h:inputTextarea>
-							</div>
-						</div>
-					</h:form>
-				</div>
-			</div>
-			<ui:insert name="content" />
-		</div>
-		</main>
-		<!-- Optional JavaScript -->
-		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-			crossorigin="anonymous">
-			/** stop autoclosing **/
-		</script>
-		<script
-			src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-			integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-			crossorigin="anonymous">
-			/** stop autoclosing **/
-		</script>
-		<script
-			src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-			integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-			crossorigin="anonymous">
-			/** stop autoclosing **/
-		</script>
-		<ui:insert name="bodyIncludes"></ui:insert>
-	</h:body>
-</f:view>
+	  xmlns:h="http://xmlns.jcp.org/jsf/html"
+	  xmlns:p="http://primefaces.org/ui">
+
+<h:head>
+	<title>Cadastro de Equipamentos</title>
+</h:head>
+<h:body>
+	<h:messages globalOnly="true" style="color:red" />
+
+	<h:panelGroup>
+		<h3>Adicionar um Equipamento</h3>
+		<h:form id="formAdd">
+			<p:panelGrid columns="2" columnClasses="label, value">
+				<p:outputLabel for="nome" value="Nome:" />
+				<p:inputText id="nome" value="#{equipamentoBean.equipamento.nome}" required="true">
+					<p:message for="nome" display="text" />
+				</p:inputText>
+
+				<p:outputLabel for="descricao" value="Descrição:" />
+				<p:inputText id="descricao" value="#{equipamentoBean.equipamento.descricao}" required="true">
+					<p:message for="descricao" display="text" />
+				</p:inputText>
+
+				<p:outputLabel for="dataChegada" value="Data de Chegada (dd/MM/yyyy):" />
+				<p:inputText id="dataChegada" value="#{equipamentoBean.equipamento.dataChegada}" required="true">
+					<p:message for="dataChegada" display="text" />
+				</p:inputText>
+
+				<p:outputLabel for="validade" value="Validade (dd/MM/yyyy):" />
+				<p:inputText id="validade" value="#{equipamentoBean.equipamento.validade}" required="true">
+					<p:message for="validade" display="text" />
+				</p:inputText>
+
+				<p:outputLabel for="valor" value="Valor:" />
+				<p:inputText id="valor" value="#{equipamentoBean.equipamento.valor}" required="true">
+					<p:message for="valor" display="text" />
+				</p:inputText>
+
+				<p:outputLabel for="status" value="Status:" />
+				<p:selectOneMenu id="status" value="#{equipamentoBean.equipamento.status}">
+					<f:selectItem itemLabel="Selecione" itemValue="" />
+					<f:selectItem itemLabel="Ativo" itemValue="Ativo" />
+					<f:selectItem itemLabel="Inativo" itemValue="Inativo" />
+				</p:selectOneMenu>
+
+				<p:commandButton value="Salvar" action="#{equipamentoBean.create()}" update=":formAdd :equipamentoTable" />
+			</p:panelGrid>
+		</h:form>
+	</h:panelGroup>
+
+	<hr/>
+
+	<h:panelGroup>
+		<h3>Atualizar o Equipamento</h3>
+		<h:form id="formUpdate">
+			<p:panelGrid columns="2" columnClasses="label, value">
+				<p:outputLabel for="idUpdate" value="ID do Equipamento:" />
+				<p:inputText id="idUpdate" value="#{equipamentoBean.equipamentoId}" required="true" />
+				<p:commandButton value="Buscar" action="#{equipamentoBean.buscarEquipamento()}" update=":formUpdate" />
+
+				<p:outputLabel for="nomeUpdate" value="Nome:" />
+				<p:inputText id="nomeUpdate" value="#{equipamentoBean.equipamentoParaAtualizar.nome}" required="true">
+					<p:message for="nomeUpdate" display="text" />
+				</p:inputText>
+
+				<p:outputLabel for="descricaoUpdate" value="Descrição:" />
+				<p:inputText id="descricaoUpdate" value="#{equipamentoBean.equipamentoParaAtualizar.descricao}" required="true">
+					<p:message for="descricaoUpdate" display="text" />
+				</p:inputText>
+
+				<p:outputLabel for="datadechegadaUpdate" value="Data de Chegada (dd/MM/yyyy):" />
+				<p:inputText id="datadechegadaUpdate" value="#{equipamentoBean.equipamentoParaAtualizar.datadechegada}" required="true">
+					<p:message for="datadechegadaUpdate" display="text" />
+				</p:inputText>
+
+				<p:outputLabel for="validadeUpdate" value="Validade (dd/MM/yyyy):" />
+				<p:inputText id="validadeUpdate" value="#{equipamentoBean.equipamentoParaAtualizar.validade}" required="true">
+					<p:message for="validadeUpdate" display="text" />
+				</p:inputText>
+
+				<p:outputLabel for="valorUpdate" value="Valor:" />
+				<p:inputText id="valorUpdate" value="#{equipamentoBean.equipamentoParaAtualizar.valor}" required="true">
+					<p:message for="valorUpdate" display="text" />
+				</p:inputText>
+
+				<p:outputLabel for="statusUpdate" value="Status:" />
+				<p:selectOneMenu id="statusUpdate" value="#{equipamentoBean.equipamentoParaAtualizar.status}">
+					<f:selectItem itemLabel="Selecione" itemValue="" />
+					<f:selectItem itemLabel="Ativo" itemValue="Ativo" />
+					<f:selectItem itemLabel="Inativo" itemValue="Inativo" />
+				</p:selectOneMenu>
+
+				<p:commandButton value="Atualizar" action="#{equipamentoBean.update()}" update=":formUpdate :equipamentoTable" />
+			</p:panelGrid>
+		</h:form>
+	</h:panelGroup>
+
+	<hr/>
+
+	<!-- Seção para Deletar Equipamento -->
+	<h:panelGroup>
+		<h3>Deletar Equipamento</h3>
+		<h:form id="formDelete">
+			<p:panelGrid columns="2" columnClasses="label, value">
+				<p:outputLabel for="idDelete" value="ID do Equipamento:" />
+				<p:inputText id="idDelete" value="#{equipamentoBean.equipamentoId}" required="true" />
+
+				<p:commandButton value="Excluir"
+								 action="#{equipamentoBean.delete(equipamentoBean.equipamentoId)}"
+								 update=":equipamentoTable"
+								 onclick="if (!confirm('Tem certeza que deseja excluir este equipamento?')) return false;" />
+			</p:panelGrid>
+		</h:form>
+	</h:panelGroup>
+
+	<hr/>
+
+
+	<h:panelGroup>
+		<h3>Lista de Equipamentos</h3>
+		<p:dataTable id="equipamentoTable" value="#{equipamentoBean.equipamentos}" var="equipamento" border="1">
+			<p:column headerText="ID">
+				<h:outputText value="#{equipamento.id}" />
+			</p:column>
+			<p:column headerText="Nome">
+				<h:outputText value="#{equipamento.nome}" />
+			</p:column>
+			<p:column headerText="Descrição">
+				<h:outputText value="#{equipamento.descricao}" />
+			</p:column>
+			<p:column headerText="Data de Chegada">
+				<h:outputText value="#{equipamento.datadechegada}" />
+			</p:column>
+			<p:column headerText="Validade">
+				<h:outputText value="#{equipamento.validade}" />
+			</p:column>
+			<p:column headerText="Valor">
+				<h:outputText value="#{equipamento.valor}" />
+			</p:column>
+			<p:column headerText="Status">
+				<h:outputText value="#{equipamento.status}" />
+			</p:column>
+			<p:column headerText="Ações">
+				<p:commandButton value="Editar" action="#{equipamentoBean.setEquipamento(equipamento)}" update=":formUpdate" />
+				<p:commandButton value="Deletar" action="#{equipamentoBean.delete(equipamento.id)}" update=":equipamentoTable" />
+			</p:column>
+		</p:dataTable>
+	</h:panelGroup>
+</h:body>
 </html>
